samples/_failures_safe/1761657908_db1a8f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3437a61a.c: In function ‘main’:
./samples/SAFE/__tmp_3437a61a.c:160:12: error: missing terminating " character
  160 |     printf("\nPerforming
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_3437a61a.c:160:5: error: expected expression at end of input
  160 |     printf("\nPerforming
      |     ^~~~~~
./samples/SAFE/__tmp_3437a61a.c:160:5: error: expected declaration or statement at end of input
